# llm-sandbox

./: .env.example  .gitignore  ARCHITECTURE.md  config_list  pkg_resources.py  pyproject.toml  pytest.ini  requirements.txt
scripts/: run_coordinator_demo.py
src/: coordinator.py  executor.py  llm_pipeline_telemetry.py  tool_registry.py  wrapper.py
src/linear/: __init__.py  extractor.py  orchestrator.py  processor.py  reasoning.py
src/multi/: __init__.py  agent.py  file_store.py  kb_agent.py  knowledge_base.py  reasoning.py  wrapper.py
src/multi/chemistry/: chem_driver.py  chem_wrapper.py  run_chem_task.py
src/multi/materials/: __init__.py  atom_driver.py  atom_wrapper.py
src/multi/sim/: __init__.py  agent.py  run_simulation.py  simulation.py
src/tools/elastic_constants_lammps/: Dockerfile  README.md  elastic_tool.py  host_wrapper.py
tests/: c44_energy_check.py  c44_pxy_diagnostic.py  conftest.py  telemetry_helpers.py  test_atom_driver.py  test_atom_wrapper.py  test_chem_driver.py  test_chem_wrapper.py  test_coordinator.py  test_elastic_tool.py  test_executor.py  test_host_wrapper.py  test_integration_lammps.py  test_integration_tool_calling.py  test_linear_extractor.py  test_linear_orchestrator.py  test_linear_processor.py  test_linear_reasoning.py  test_llm_pipeline_telemetry.py  test_multi_file_store.py  test_multi_kb_agent.py  test_multi_knowledge_base.py  test_multi_wrapper.py  test_sim_agent.py  test_tool_registry.py  test_wrapper.py
tests/integration/: conftest.py
tests/integration/linear/: __init__.py  test_integration_telemetry_linear.py  (+1 more)
(+10 files in other folders)
